@@ -39,7 +39,11 @@ $up = newUploadProgress();
 ?>
 
     <li>
-      <label class="description">Upload a File</label>
+      <?php
+        $error = (isset($_POST["submit"]) && empty($_FILES["file"]["name"]));
+        $class = "description" . ($error? " required": "");
+      ?>
+      <label class="<?php echo $class; ?>">Upload a File</label>
       <div>
         <input type="hidden" name="max_file_size" value="<?php echo $iMaxSize; ?>"/>
         <?php uploadProgressField($up); ?>
@@ -147,9 +151,10 @@ $up = newUploadProgress();
     </li>
 
     <li class="buttons">
-      <input id="submit" type="submit" name="submit" value="Upload"/>
-      <input type="reset" name="submit" value="Reset"/>
-      <input type="button" name="submit" value="Set as defaults "onclick="setDefaults();"/>
+      <input type="hidden" name="submit" value="1"/>
+      <input id="submit" type="submit" value="Upload"/>
+      <input type="reset" value="Reset"/>
+      <input type="button" value="Set as defaults "onclick="setDefaults();"/>
       <?php uploadProgressHtml($up); ?>
     </li>
   </ul>
